--- a/package.json
+++ b/package.json
@@ -28,70 +28,36 @@
     "@angular/router": "15.2.10",
     "@awesome-cordova-plugins/android-permissions": "6.3.0",
     "@awesome-cordova-plugins/app-version": "6.3.0",
-    "@awesome-cordova-plugins/camera": "6.3.0",
-    "@awesome-cordova-plugins/chooser": "6.3.0",
     "@awesome-cordova-plugins/core": "6.3.0",
     "@awesome-cordova-plugins/diagnostic": "6.4.0",
     "@awesome-cordova-plugins/fcm": "6.3.0",
     "@awesome-cordova-plugins/file": "6.4.0",
     "@awesome-cordova-plugins/file-transfer": "6.4.0",
-    "@awesome-cordova-plugins/google-plus": "6.3.0",
     "@awesome-cordova-plugins/http": "6.3.0",
-    "@awesome-cordova-plugins/media": "6.3.0",
-    "@awesome-cordova-plugins/streaming-media": "6.3.0",
-    "@capacitor-community/apple-sign-in": "5.0.0",
-    "@capacitor-community/barcode-scanner": "4.0.1",
     "@capacitor-community/file-opener": "1.0.5",
     "@capacitor/android": "5.5.1",
     "@capacitor/app": "5.0.6",
-    "@capacitor/browser": "5.2.0",
-    "@capacitor/camera": "5.0.7",
     "@capacitor/core": "5.5.1",
     "@capacitor/device": "5.0.6",
     "@capacitor/haptics": "5.0.6",
-    "@capacitor/keyboard": "5.0.6",
-    "@capacitor/local-notifications": "5.0.6",
     "@capacitor/network": "5.0.6",
-    "@capacitor/preferences": "5.0.6",
     "@capacitor/screen-orientation": "5.0.6",
-    "@capacitor/share": "5.0.6",
-    "@capacitor/splash-screen": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@capawesome/capacitor-file-picker": "5.1.1",
     "@ionic/angular": "6.7.5",
-    "@ngx-translate/core": "14.0.0",
-    "@ngx-translate/http-loader": "6.0.0",
-    "@project-sunbird/client-services": "7.0.6",
-    "@project-sunbird/common-consumption": "8.0.1",
-    "@project-sunbird/common-form-elements": "8.0.5",
-    "@project-sunbird/content-player": "5.1.0",
-    "@project-sunbird/discussions-ui": "8.0.4",
-    "@project-sunbird/sb-dashlet": "8.0.0",
-    "@project-sunbird/sb-notification": "8.0.0",
-    "@project-sunbird/sb-styles": "0.0.16",
-    "@project-sunbird/sb-svg2pdf": "8.0.4",
     "@project-sunbird/sunbird-epub-player-web-component": "1.2.0",
     "@project-sunbird/sunbird-pdf-player-web-component": "1.1.0",
     "@project-sunbird/sunbird-quml-player-web-component": "3.0.3",
-    "@project-sunbird/sunbird-sdk": "7.0.21",
     "@project-sunbird/sunbird-video-player-web-component": "1.0.1",
-    "chart.js": "3.4.0",
-    "chartjs-plugin-datalabels": "2.0.0",
-    "chartjs-plugin-stacked100": "0.7.1",
-    "colors": "1.4.0",
-    "cordova-plugin-android-permissions": "1.1.2",
-    "cordova-plugin-qr-scanner": "git+https://github.com/project-sunbird/cordova-plugin-qr-scanner.git#release-7.0.0_cap",
+    "cordova-plugin-advanced-http": "^3.0.0",
+    "cordova-plugin-file": "^8.0.0",
     "core-js": "3.23.3",
-    "crypto-js": "4.2.0",
-    "datatables.net-dt": "1.13.4",
-    "datatables.net-fixedcolumns": "3.3.3",
     "dayjs": "1.9.8",
     "dom-to-image": "2.6.0",
     "epubjs": "^0.3.93",
     "grapheme-splitter": "1.0.4",
     "hammerjs": "2.0.8",
     "ionic4-rating": "1.0.9",
-    "jest-preset-angular": "13.0.0",
     "jquery": "^3.7.1",
     "jspdf": "2.0.0",
     "jwt-decode": "2.2.0",
@@ -107,16 +73,10 @@
     "ngx-chips": "2.2.2",
     "ngx-infinite-scroll": "15.0.0",
     "ngx-moment": "5.0.0",
-    "pouchdb": "7.2.2",
-    "pouchdb-adapter-cordova-sqlite": "2.0.7",
-    "pouchdb-find": "7.2.2",
     "reflect-metadata": "0.2.1",
     "rxjs": "^6.6.7",
-    "sb-tag-manager": "^3.9.19",
-    "stream-browserify": "3.0.0",
     "tslib": "2.3.0",
     "typescript-collections": "1.3.3",
-    "uk.co.workingedge.phonegap.plugin.istablet": "1.2.0",
     "util": "0.12.5",
     "uuid": "9.0.1",
     "video.js": "7.18.1",
@@ -145,32 +105,9 @@
     "@types/lodash": "4.14.180",
     "@types/node": "12.11.5",
     "babel-polyfill": "6.26.0",
-    "code-push": "3.0.1",
-    "com-sarriaroman-photoviewer": "1.3.0",
-    "cordova-plugin-android-downloadmanager": "git+https://github.com/Sunbird-Ed/sb-cordova-plugin-downloadmanager.git",
-    "cordova-plugin-code-push": "git+https://github.com/swayangjit/cordova-plugin-code-push.git",
-    "cordova-plugin-device": "2.1.0",
-    "cordova-plugin-dialogs": "2.0.2",
-    "cordova-plugin-document-viewer": "1.0.0",
-    "cordova-plugin-fcm-with-dependecy-updated": "git+https://github.com/Sunbird-Ed/sb-cordova-plugin-fcm.git#release-6.0.0",
-    "cordova-plugin-googleplus": "8.5.2",
-    "cordova-plugin-inappupdatemanager": "git+https://github.com/subranil/cordova-plugin-inappupdatemanager.git#release-3.7.0",
-    "cordova-plugin-media": "7.0.0",
-    "cordova-plugin-printer": "git+https://github.com/vpPavithra/cordova-plugin-printer.git#release-7.0.0_cap",
-    "cordova-plugin-streaming-media": "2.3.0",
-    "cordova-plugin-telerik-imagepicker": "git+https://github.com/vpPavithra/ImagePicker.git#release-7.0.0_cap",
-    "cordova-plugin-zip": "3.1.0",
-    "cordova-zip-plugin": "git+https://github.com/Sunbird-Ed/jjdltc-cordova-plugin-zip.git",
-    "cordova.plugins.diagnostic": "6.1.1",
-    "es6-promise-plugin": "4.2.2",
     "fs-extra": "8.1.0",
     "jest": "29.0.0",
     "plist": "3.0.2",
-    "properties-reader": "2.2.0",
-    "sb-cordova-plugin-customtabs": "git+https://github.com/Sunbird-Ed/sb-cordova-plugin-customtabs.git#release-5.0.2",
-    "sb-cordova-plugin-db": "git+https://github.com/Sunbird-Ed/sb-cordova-plugin-db.git#release-6.0.0",
-    "sb-cordova-plugin-utility": "git+https://github.com/Sunbird-Ed/sb-cordova-plugin-utility.git#release-6.0.0",
-    "sonarqube-scanner": "3.3.0",
     "tiny-glob": "0.2.9",
     "ts-node": "10.9.1",
     "tslint": "6.1.0",
