Added Ecml player

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "capacitor:sync:after": "node hooks/capacitor-copy-after.js android",
+    "capacitor:sync:before": "node hooks/copyContentPlayer.js android",
+    "capacitor:update:after": "node hooks/copyContentPlayer.js android",
     "ionic-build": "ng build && ionic cap run android --source-map=true --target Pixel_3_API_31",
     "test": "ng test",
     "lint": "ng lint"
@@ -45,11 +47,11 @@
     "@capacitor/status-bar": "5.0.6",
     "@capawesome/capacitor-file-picker": "5.1.1",
     "@ionic/angular": "6.7.5",
+    "@project-sunbird/content-player": "^5.1.0",
     "@project-sunbird/sunbird-epub-player-web-component": "1.2.0",
     "@project-sunbird/sunbird-pdf-player-web-component": "1.1.0",
     "@project-sunbird/sunbird-quml-player-web-component": "3.0.3",
     "@project-sunbird/sunbird-video-player-web-component": "1.0.1",
-    "cordova-plugin-advanced-http": "^3.0.0",
     "cordova-plugin-file": "^8.0.0",
     "core-js": "3.23.3",
     "dayjs": "1.9.8",
